# cocolab_vwm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
cocolab_vwm/: __init__.py  _version.py
cocolab_vwm/control/: __init__.py  bg_gate.py
cocolab_vwm/core/: __init__.py  crosstalk.py  dynamics.py  params.py  pooling.py
cocolab_vwm/layers/: __init__.py  hierarchy.py  nengo_layer.py  pooled_hierarchy.py
cocolab_vwm/tasks/: __init__.py  change_detection.py  stimuli.py
cocolab_vwm/utils/: __init__.py  metrics.py
docs/: github_setup.md
examples/: 01_quickstart_change_detection.py  02_nengo_layer_demo.py  03_bg_op_selection.py
tests/: conftest.py
tests/integration/: test_bg_gate.py  test_hierarchy.py  test_nengo_layer.py  test_pooled_hierarchy.py
tests/regression/: test_published_results.py
tests/unit/: test_crosstalk_and_metrics.py  test_dynamics.py  test_params.py  test_pooling.py
