[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocolab_vwm"
description = "Hierarchical Visual Working Memory module for Nengo (CoCoLab, Krea University)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rakesh Sengupta", email = "rakesh.sengupta@krea.edu.in"},
]
keywords = ["working memory", "neural networks", "nengo", "OCOS",
            "cognitive science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "nengo>=4.0",
    "nengo-spa>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
plot = [
    "matplotlib>=3.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/yourusername/cocolab_vwm"
Issues = "https://github.com/yourusername/cocolab_vwm/issues"

[tool.setuptools.dynamic]
version = {attr = "cocolab_vwm._version.__version__"}

[tool.setuptools.packages.find]
include = ["cocolab_vwm*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests requiring Nengo simulation",
    "regression: marks tests locking published numerical results",
]
filterwarnings = [
    "ignore::DeprecationWarning:nengo.*",
]

[tool.coverage.run]
source = ["cocolab_vwm"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # nengo lacks complete type stubs
